<resources>
    <string name="app_name">Blackjack Helper</string>
    <string name="item_1">Get Help</string>
    <string name="item_2">Practice Mode (Coming Soon!)</string>
    <string name="select_dealer_card_message">What\'s the dealer showing?</string>
    <string name="select_player_card_one_message">What\'s your first card?</string>
    <string name="select_player_card_two_message">What\'s your other card?</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="j">J</string>
    <string name="q">Q</string>
    <string name="k">K</string>
    <string name="a">A</string>
    <string name="advice_message">You Should %1$s</string>
    <string name="advice_message_bj">Come on now! You got %1$s</string>
    <string name="dealer_message_results">Dealer\'s Card: %1$s</string>
    <string name="player_message_results">Player\'s Cards: %1$s and %2$s</string>
    <string name="new_hand">New Hand</string>
    <string name="get_help">Hand Help</string>
    <string name="practice">Practice Mode</string>
    <string name="stay_soft_17_hit_soft_17">Stay Soft 17 / Hit Soft 17</string>
    <string name="try_again">Try Again</string>
    <string name="guess">Guess</string>
    <string name="dealer_has">Dealer Has:</string>
    <string name="you_have">You Have:</string>
    <string name="you_should">What Should You Do?</string>
    <string name="randomly_selected_dealer_card">randomly selected dealer card</string>
    <string name="randomly_selected_first_player_card">randomly selected first player card</string>
    <string name="randomly_selected_second_player_card">randomly selected second player card</string>
    <string name="current_streak">Current Streak</string>
    <string name="high_score">High Score</string>
    <string name="make_the_correct_decision_at_the_table">Make the correct decision at the table</string>
    <string name="splash_image_icon">splash image icon</string>
    <string name="leader_board">Leaderboard</string>
    <string name="add_to_leaderboard_summary_line_1">Your score of %1$s in a row made our leaderboard.</string>
    <string name="add_to_leaderboard_summary_line_2">Congrats. Enter your name to get added.</string>
    <string name="name">Name</string>
    <string name="user_in_leaderboard">%1$s %2$s</string>
    <string name="user">User</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
</resources>
